--- a/backend/templates/alumni_form.html
+++ b/backend/templates/alumni_form.html
@@ -1,4 +1,4 @@
-{{% extends "base.html" %}
+{% extends "base.html" %}
 {% block title %}{{ 'Edit' if alumnus else 'Add New' }} Alumnus{% endblock %}
 
 {% block content %}
