--- a/backend/templates/skillset_form.html
+++ b/backend/templates/skillset_form.html
@@ -4,9 +4,11 @@
   <h2>Skill</h2>
   <form method="post">
     {{ form.csrf_token }}
-    {{ form.skillName.label }} {{ form.skillName(class="form-control mb-2") }}
-    {{ form.proficiencyLevel.label }} {{ form.proficiencyLevel(class="form-control mb-2") }}
-    {{ form.dateReceived.label }} {{ form.dateReceived(class="form-control mb-2") }}
+    {{ form.skill.label }} {{ form.skill(class="form-control mb-2") }}
+    {{ form.proficiency.label }} {{ form.proficiency(class="form-control mb-2") }}
+    {{ form.description.label }} {{ form.description(class="form-control mb-2") }}
+    {{ form.alumniID.label }} {{ form.alumniID(class="form-control mb-2") }}
+
     <button type="submit" class="btn btn-success">{{ form.submit.label.text }}</button>
   </form>
 {% endblock %}
