fix donation amount

--- a/backend/templates/donation_form.html
+++ b/backend/templates/donation_form.html
@@ -5,7 +5,7 @@
   <form method="post">
     {{ form.csrf_token }}
     {{ form.donationDT.label }} {{ form.donationDT(class="form-control mb-2") }}
-    {{ form.amount.label }} {{ form.amount(class="form-control mb-2") }}
+    {{ form.donationAmt.label }} {{ form.donationAmt(class="form-control mb-2") }}
     {{ form.recurringYN.label }} {{ form.recurringYN(class="form-select mb-2") }}
     {{ form.notes.label }} {{ form.notes(class="form-control mb-2") }}
     <button type="submit" class="btn btn-success">{{ form.submit.label.text }}</button>
