--- a/backend/templates/donation_form.html
+++ b/backend/templates/donation_form.html
@@ -7,7 +7,7 @@
     {{ form.donationDT.label }} {{ form.donationDT(class="form-control mb-2") }}
     {{ form.donationAmt.label }} {{ form.donationAmt(class="form-control mb-2") }}
     {{ form.recurringYN.label }} {{ form.recurringYN(class="form-select mb-2") }}
-    {{ form.notes.label }} {{ form.notes(class="form-control mb-2") }}
+    {{ form.reason.label }} {{ form.reason(class="form-control mb-2") }}
     <button type="submit" class="btn btn-success">{{ form.submit.label.text }}</button>
   </form>
 {% endblock %}
