--- a/backend/templates/donation_list.html
+++ b/backend/templates/donation_list.html
@@ -3,7 +3,9 @@
 {% block content %}
   <h2>Donations</h2>
     {% if session.perms.insert == 'Y' %}
-    <a href="{{ url_for('donation.add_donation') }}" class="btn btn-primary mb-3">Add New Donation</a>
+    <a class="btn btn-secondary mb-3"
+   href="{{ url_for('donation.add_donation', alumniID=alumnus.alumniID) }}">
+   Add New Donation
     {% endif %}
   <table class="table table-striped">
     <thead>
