--- a/backend/templates/alumni_form.html
+++ b/backend/templates/alumni_form.html
@@ -71,9 +71,10 @@ t{% extends "base.html" %}
   <p>No degrees on record.</p>
 {% endif %}
 {% if session.perms.insert == 'Y' %}
-<a class="btn btn-secondary mb-3" href="{{ url_for('degree.add_degree', alumniID=alumnus.alumniID) }}">
+<a href="{{ url_for('degree.add_degree', alumniID=alumnus.alumniID) }}" class="btn btn-secondary mb-3">
   Add New Degree
 </a>
+
 
 {% endif %}
 
