--- a/backend/templates/degree_form.html
+++ b/backend/templates/degree_form.html
@@ -3,26 +3,24 @@
 {% block content %}
   <h2>Degree</h2>
   <form method="post">
-    {{ form.hidden_tag() }}
-    <div class="mb-3">
-      {{ form.major.label }} {{ form.major(class="form-control") }}
-    </div>
-    <div class="mb-3">
-      {{ form.minor.label }} {{ form.minor(class="form-control") }}
-    </div>
-    <div class="mb-3">
-      {{ form.graduationDate.label }} {{ form.graduationDate(class="form-control", placeholder="YYYY-MM-DD") }}
-    </div>
-    <div class="mb-3">
-      {{ form.university.label }} {{ form.university(class="form-control") }}
-    </div>
-    <div class="mb-3">
-      {{ form.city.label }} {{ form.city(class="form-control") }}
-    </div>
-    <div class="mb-3">
-      {{ form.state.label }} {{ form.state(class="form-control") }}
-    </div>
-    {{ form.submit(class="btn btn-success") }}
-  </form>
-{% endblock %}
-
+  {{ form.hidden_tag() }}
+  <div class="mb-3">
+    {{ form.major.label }} {{ form.major(class="form-control") }}
+  </div>
+  <div class="mb-3">
+    {{ form.minor.label }} {{ form.minor(class="form-control") }}
+  </div>
+  <div class="mb-3">
+    {{ form.graduationDate.label }} {{ form.graduationDate(class="form-control") }}
+  </div>
+  <div class="mb-3">
+    {{ form.university.label }} {{ form.university(class="form-control") }}
+  </div>
+  <div class="mb-3">
+    {{ form.city.label }} {{ form.city(class="form-control") }}
+  </div>
+  <div class="mb-3">
+    {{ form.state.label }} {{ form.state(class="form-control") }}
+  </div>
+  {{ form.submit(class="btn btn-success") }}
+</form>
