--- a/backend/templates/degree_form.html
+++ b/backend/templates/degree_form.html
@@ -2,8 +2,11 @@
 {% block title %}Degree Form{% endblock %}
 {% block content %}
   <h2>Degree</h2>
-<form method="post">
+  <form method="post">
   {{ form.hidden_tag() }}
+  <div class="mb-3">
+    {{ form.fName.label }} {{ form.fName(class="form-control") }}
+  </div>
   <div class="mb-3">
     {{ form.major.label }} {{ form.major(class="form-control") }}
   </div>
